menambahkan grafik pengeluaran-Desinta

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -550,6 +550,10 @@
             <span class="nav-icon">🔄</span>
             History
         </a>
+        <a href="{{ url_for('grafik_pengeluaran') }}" " class="nav-item">
+            <span class="nav-icon">📊</span>
+            Report
+        </a>
     </div>
 
     <script>
